force-app/main/default/objects/Producto_de_Levantamiento__c/Producto_de_Levantamiento__c.object-meta.xml
<CustomObject>
    <label>Producto de Levantamiento</label>
    <nameField>
        <label>Nombre de Producto de Levantamiento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Productos de Levantamiento</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>