force-app/main/default/objects/Producto_de_Levantamiento__c/fields/Codigo_de_Barras__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_Barras__c</fullName>
    <label>Código de Barras</label>
    <length>255</length>
    <type>Text</type>
</CustomField>