force-app/main/default/objects/Producto_de_Levantamiento__c/fields/Empaque__c.field-meta.xml
<CustomField>
    <fullName>Empaque__c</fullName>
    <label>Empaque</label>
    <length>255</length>
    <type>Text</type>
</CustomField>