force-app/main/default/objects/Producto_de_Levantamiento__c/fields/Fecha_del_ticket__c.field-meta.xml
<CustomField>
    <fullName>Fecha_del_ticket__c</fullName>
    <label>Fecha del ticket</label>
    <type>Date</type>
</CustomField>