force-app/main/default/objects/Producto_de_Levantamiento__c/fields/Levantamiento__c.field-meta.xml
<CustomField>
    <fullName>Levantamiento__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Levantamiento</label>
    <referenceTo>Levantamiento__c</referenceTo>
    <relationshipLabel>Productos de Levantamiento</relationshipLabel>
    <relationshipName>Productos_de_Levantamiento</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>