force-app/main/default/objects/Producto_de_Levantamiento__c/fields/Precio_del_Producto__c.field-meta.xml
<CustomField>
    <fullName>Precio_del_Producto__c</fullName>
    <label>Precio del Producto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>