force-app/main/default/objects/Producto_de_Levantamiento__c/fields/Submarca__c.field-meta.xml
<CustomField>
    <fullName>Submarca__c</fullName>
    <label>Submarca</label>
    <length>255</length>
    <type>Text</type>
</CustomField>